--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "webpack-dev-server": "^2.4.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "start": "webpack-dev-server --inline --hot"
   },
   "devDependencies": {
     "css-loader": "^0.28.7"
