--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bundle-loader": "^0.5.5",
     "jest": "^20.0.4",
     "material-ui": "^0.19.4",
+    "prop-types": "^15.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.6",
